--- a/Lab/V1/Module/Terminal/view/adminhtml/layout/terminal_index_index.xml
+++ b/Lab/V1/Module/Terminal/view/adminhtml/layout/terminal_index_index.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Magento\Framework\View\Element\Template" name="terminal.view" template="Lab_Terminal::terminal-interface.phtml" />
+            <block class="Magento\Framework\View\Element\Template" name="terminal.view" template="Lab_Terminal::terminal-multi-tab.phtml" />
         </referenceContainer>
     </body>
 </page>
