--- a/Core/V1/Module/NotificationsPoller/view/adminhtml/layout/default.xml
+++ b/Core/V1/Module/NotificationsPoller/view/adminhtml/layout/default.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceContainer name="after.body.start">
-            <block class="Magento\Framework\View\Element\Template"
-                   name="core.notifications.poller"
-                   template="Core_NotificationsPoller::poller.phtml"/>
-        </referenceContainer>
+<!--        <referenceContainer name="after.body.start">-->
+<!--            <block class="Magento\Framework\View\Element\Template"-->
+<!--                   name="core.notifications.poller"-->
+<!--                   template="Core_NotificationsPoller::poller.phtml"/>-->
+<!--        </referenceContainer>-->
     </body>
 </page>
