--- a/Academy/V1/Module/SampleApi/view/adminhtml/layout/sampleapi_index_form.xml
+++ b/Academy/V1/Module/SampleApi/view/adminhtml/layout/sampleapi_index_form.xml
@@ -3,7 +3,7 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <uiComponent name="Academy_sampleapi_form"/>
+            <uiComponent name="sampleapi_form"/>
         </referenceContainer>
     </body>
 </page>
