--- a/Academy/V1/Module/News/view/adminhtml/layout/news_news_edit.xml
+++ b/Academy/V1/Module/News/view/adminhtml/layout/news_news_edit.xml
@@ -3,7 +3,7 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <uiComponent name="Academy_news_form"/>
+            <uiComponent name="academy_news_form"/>
         </referenceContainer>
     </body>
 </page>
