--- a/Pipelines/V1/Module/TemplateStore/view/adminhtml/layout/templatestore_index_index.xml
+++ b/Pipelines/V1/Module/TemplateStore/view/adminhtml/layout/templatestore_index_index.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <head>
-        <css src="Pipelines_FormTemplate::css/formtemplate-menu.css"/>
-    </head>
+    <body>
+        <referenceContainer name="content">
+            <uiComponent name="templatestore_listing"/>
+        </referenceContainer>
+    </body>
 </page>
