--- a/Pipelines/V1/Module/TemplateStore/view/adminhtml/layout/templatestore_index_index.xml
+++ b/Pipelines/V1/Module/TemplateStore/view/adminhtml/layout/templatestore_index_index.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+
     <body>
         <referenceContainer name="content">
-<!--            <uiComponent name="templatestore_listing"/>-->
+            <block class="Magento\Framework\View\Element\Template"
+                   name="templatestore.card.grid"
+                   template="Pipelines_TemplateStore::index.phtml"/>
         </referenceContainer>
     </body>
 </page>
