Pipelines: bugfix card button label

--- a/Pipelines/V1/Module/TemplateStore/view/adminhtml/templates/index.phtml
+++ b/Pipelines/V1/Module/TemplateStore/view/adminhtml/templates/index.phtml
@@ -31,7 +31,7 @@ $apps = [
             </div>
             <div class="app-card__footer">
                 <span class="app-card__price"><?= $block->escapeHtml($app['price']) ?></span>
-                <button class="action-primary"><?= __('Install') ?></button>
+                <button class="action-primary"><?= __('Select') ?></button>
             </div>
         </div>
     <?php endforeach; ?>
