--- a/Pipelines/V1/Module/PipeManager/view/adminhtml/layout/pipemanager_pipeline_run_index.xml
+++ b/Pipelines/V1/Module/PipeManager/view/adminhtml/layout/pipemanager_pipeline_run_index.xml
@@ -4,7 +4,7 @@
     <body>
         <referenceContainer name="content">
             <block class="Magento\Framework\View\Element\Template"
-                   name="pipemanager.run.logs"
+                   name="pipemanager.run.index"
                    template="Pipelines_PipeManager::run/logs.phtml"/>
         </referenceContainer>
     </body>
