--- a/Pipelines/V1/Module/PipeManager/view/adminhtml/layout/pipemanager_pipeline_run_index.xml
+++ b/Pipelines/V1/Module/PipeManager/view/adminhtml/layout/pipemanager_pipeline_run_index.xml
@@ -5,7 +5,7 @@
         <referenceContainer name="content">
             <block class="Magento\Framework\View\Element\Template"
                    name="pipemanager.run.index"
-                   template="Pipelines_PipeManager::run/logs.phtml"/>
+                   template="Pipelines_PipeManager::logs.phtml"/>
         </referenceContainer>
     </body>
 </page>
