task-73: add mock delete action

--- a/Pipelines/V1/Module/TemplateStore/view/adminhtml/templates/index.phtml
+++ b/Pipelines/V1/Module/TemplateStore/view/adminhtml/templates/index.phtml
@@ -3,7 +3,38 @@
 
 // Fake data for the prototype – replace with real collection / API call
 $apps = [
-    ['title' => 'Inventory Sync', 'icon' => 'inventory.svg', 'desc' => 'Two-way stock sync', 'price' => 'Free'],
+    ['title' => 'Bucket s3', 'icon' => 'inventory.svg', 'desc' => 'Create a new bucket s3 on aws', 'price' => 'Included'],
+    ['title' => 'Bucket s3 public', 'icon' => 'inventory.svg', 'desc' => 'Create a new bucket s3 on aws with public access', 'price' => 'Included'],
+    ['title' => 'EKS Cluster', 'icon' => 'inventory.svg', 'desc' => 'Create a new EKS cluster on aws', 'price' => 'Included'],
+    ['title' => 'Custom Cluster lightsail', 'icon' => 'inventory.svg', 'desc' => 'Create a new custom cluster on lightsail', 'price' => 'Included'],
+    ['title' => 'Custom Cluster EC2', 'icon' => 'inventory.svg', 'desc' => 'Create a new custom cluster on ec2', 'price' => 'Included'],
+    ['title' => 'Docker node lightsail', 'icon' => 'inventory.svg', 'desc' => 'Create a new Docker node on lightsail', 'price' => 'Included'],
+    ['title' => 'Docker node EC2', 'icon' => 'inventory.svg', 'desc' => 'Create a new Docker node on ec2', 'price' => 'Included'],
+    ['title' => 'Docker node Azure', 'icon' => 'inventory.svg', 'desc' => 'Create a new Docker node on Azure', 'price' => 'Included'],
+    ['title' => 'X509 wildcard route53', 'icon' => 'inventory.svg', 'desc' => 'Create a new X509 wildcard on route53', 'price' => 'Included'],
+    ['title' => 'X509 wildcard Azure', 'icon' => 'inventory.svg', 'desc' => 'Create a new X509 wildcard on Azure', 'price' => 'Included'],
+    ['title' => 'X509 wildcard OVH', 'icon' => 'inventory.svg', 'desc' => 'Create a new X509 wildcard on OVH', 'price' => 'Included'],
+    ['title' => 'Build Docker image', 'icon' => 'inventory.svg', 'desc' => 'Build a new docker image', 'price' => 'Included'],
+    ['title' => 'Build SpringBoot application', 'icon' => 'inventory.svg', 'desc' => 'Build a new SpringBoot application', 'price' => 'Included'],
+    ['title' => 'CI/CD SpringBoot microservice Kubernetes', 'icon' => 'inventory.svg', 'desc' => 'CI/CD SpringBoot microservice Kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy Wordpress lightsail', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Wordpress app on lightsail', 'price' => 'Included'],
+    ['title' => 'Deploy Wordpress kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Wordpress app on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy Magento 2 lightsail', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Magento 2 app on lightsail', 'price' => 'Included'],
+    ['title' => 'Deploy Magento 2 kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Magento 2 app on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy Drupal lightsail', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Drupal app on lightsail', 'price' => 'Included'],
+    ['title' => 'Deploy Drupal kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Drupal app on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy MySQL 8 RDS', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new MySQL on RDS', 'price' => 'Included'],
+    ['title' => 'Deploy MySQL 8 kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new MySQL 8 on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy ElasticSearch 7 kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new ElasticSearch 7 on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy ElasticSearch 8 kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new ElasticSearch 8 on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy ELK 7 kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new ELK 7 on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy ELK 8 kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new ELK 8 on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy Kafka kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Kafka on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy RabbitMQ kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new RabbitMQ on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy Prometheus kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Prometheus on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy Prometheus+Grafana kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Prometheus+Grafana on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy Monitoring kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Monitoring on kubernetes', 'price' => 'Included'],
+    ['title' => 'Deploy APM kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new APM on kubernetes', 'price' => 'Included'],
     ['title' => 'Smart Search',   'icon' => 'search.svg',    'desc' => 'AI powered search',  'price' => '$19/mo'],
     ['title' => 'Loyalty Points', 'icon' => 'loyalty.svg',   'desc' => 'Reward customers',  'price' => 'Free trial'],
 ];
