PipeManager: init log viewer

--- a/Pipelines/V1/Module/PipeManager/view/adminhtml/templates/logs.phtml
+++ b/Pipelines/V1/Module/PipeManager/view/adminhtml/templates/logs.phtml
@@ -1,8 +1,48 @@
-<?php
-/**
- * @var $block
- */
+<?php /** @var $block \Magento\Framework\View\Element\Template */ ?>
+<link rel="stylesheet" type="text/css"
+      href="<?= $block->getViewFileUrl('Pipelines_PipeManager::css/log-viewer.css') ?>" />
 
-dd($block);
+<script type="text/x-magento-init">
+    {
+        "#devops-log-viewer": {
+            "Pipelines_PipeManager/js/log-viewer": {}
+        }
+    }
+</script>
 
-?>
+<div id="devops-log-viewer" class="dlv">
+    <!---- TIMELINE –-->
+    <aside class="dlv-timeline">
+        <header><?= __('Pipeline') ?></header>
+        <ol>
+            <li class="done"><span></span>Build Certs <small>50 s</small></li>
+            <li class="done"><span></span>Get Certs <small>21 s</small></li>
+            <li class="done"><span></span>Build &amp; Push <small>2 m 10 s</small></li>
+            <li class="active"><span></span>Test Ingress <small>running…</small></li>
+        </ol>
+    </aside>
+
+    <!---- LOG PANE –-->
+    <section class="dlv-log">
+        <header>
+            <strong>Build · docker</strong>
+            <button data-action="clear" title="<?= __('Clear log') ?>">🗑</button>
+            <button data-action="copy"  title="<?= __('Copy all') ?>">📋</button>
+        </header>
+
+        <pre class="dlv-log__body">
+153 Completed 26.6 KiB/27.1 KiB (24.8 KiB/s) with 2 file(s) remaining
+154 download: s3://…/privkey.pem to …/privkey.pem
+155 Completed 26.6 KiB/27.1 KiB (24.6 KiB/s) with 1 file(s) remaining
+156 download: s3://…/fullchain.pem to …/fullchain.pem
+157 Cleanup symlinks…
+158 <span class="warn">Building certs…</span>
+159 <span class="warn">Use of --dns-route53-propagation-seconds is deprecated.</span>
+160 Saving debug log to /var/log/letsencrypt/letsencrypt.log
+161
+162  Processing /etc/letsencrypt/renewal/sindria.org.conf
+163  Certificate not yet due for renewal
+...
+        </pre>
+    </section>
+</div>
