task-73: add mock delete action

--- a/Pipelines/V1/Module/TemplateStore/view/adminhtml/templates/index.phtml
+++ b/Pipelines/V1/Module/TemplateStore/view/adminhtml/templates/index.phtml
@@ -3,13 +3,14 @@
 
 // Fake data for the prototype – replace with real collection / API call
 $apps = [
+    ['title' => 'Deploy Minecraft kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Minecraft on kubernetes', 'price' => 'Included'],
+    ['title' => 'Docker node lightsail', 'icon' => 'inventory.svg', 'desc' => 'Create a new Docker node on lightsail', 'price' => 'Included'],
+    ['title' => 'Docker node EC2', 'icon' => 'inventory.svg', 'desc' => 'Create a new Docker node on ec2', 'price' => 'Included'],
     ['title' => 'Bucket s3', 'icon' => 'inventory.svg', 'desc' => 'Create a new bucket s3 on aws', 'price' => 'Included'],
     ['title' => 'Bucket s3 public', 'icon' => 'inventory.svg', 'desc' => 'Create a new bucket s3 on aws with public access', 'price' => 'Included'],
     ['title' => 'EKS Cluster', 'icon' => 'inventory.svg', 'desc' => 'Create a new EKS cluster on aws', 'price' => 'Included'],
     ['title' => 'Custom Cluster lightsail', 'icon' => 'inventory.svg', 'desc' => 'Create a new custom cluster on lightsail', 'price' => 'Included'],
     ['title' => 'Custom Cluster EC2', 'icon' => 'inventory.svg', 'desc' => 'Create a new custom cluster on ec2', 'price' => 'Included'],
-    ['title' => 'Docker node lightsail', 'icon' => 'inventory.svg', 'desc' => 'Create a new Docker node on lightsail', 'price' => 'Included'],
-    ['title' => 'Docker node EC2', 'icon' => 'inventory.svg', 'desc' => 'Create a new Docker node on ec2', 'price' => 'Included'],
     ['title' => 'Docker node Azure', 'icon' => 'inventory.svg', 'desc' => 'Create a new Docker node on Azure', 'price' => 'Included'],
     ['title' => 'X509 wildcard route53', 'icon' => 'inventory.svg', 'desc' => 'Create a new X509 wildcard on route53', 'price' => 'Included'],
     ['title' => 'X509 wildcard Azure', 'icon' => 'inventory.svg', 'desc' => 'Create a new X509 wildcard on Azure', 'price' => 'Included'],
