--- a/Pipelines/V1/Module/TemplateStore/view/adminhtml/templates/index.phtml
+++ b/Pipelines/V1/Module/TemplateStore/view/adminhtml/templates/index.phtml
@@ -3,41 +3,41 @@
 
 // Fake data for the prototype – replace with real collection / API call
 $apps = [
-    ['title' => 'Deploy Minecraft kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Minecraft on kubernetes', 'price' => 'Included'],
-    ['title' => 'Docker node lightsail', 'icon' => 'inventory.svg', 'desc' => 'Create a new Docker node on lightsail', 'price' => 'Included'],
-    ['title' => 'Docker node EC2', 'icon' => 'inventory.svg', 'desc' => 'Create a new Docker node on ec2', 'price' => 'Included'],
-    ['title' => 'Bucket s3', 'icon' => 'inventory.svg', 'desc' => 'Create a new bucket s3 on aws', 'price' => 'Included'],
-    ['title' => 'Bucket s3 public', 'icon' => 'inventory.svg', 'desc' => 'Create a new bucket s3 on aws with public access', 'price' => 'Included'],
-    ['title' => 'EKS Cluster', 'icon' => 'inventory.svg', 'desc' => 'Create a new EKS cluster on aws', 'price' => 'Included'],
-    ['title' => 'Custom Cluster lightsail', 'icon' => 'inventory.svg', 'desc' => 'Create a new custom cluster on lightsail', 'price' => 'Included'],
-    ['title' => 'Custom Cluster EC2', 'icon' => 'inventory.svg', 'desc' => 'Create a new custom cluster on ec2', 'price' => 'Included'],
-    ['title' => 'Docker node Azure', 'icon' => 'inventory.svg', 'desc' => 'Create a new Docker node on Azure', 'price' => 'Included'],
-    ['title' => 'X509 wildcard route53', 'icon' => 'inventory.svg', 'desc' => 'Create a new X509 wildcard on route53', 'price' => 'Included'],
-    ['title' => 'X509 wildcard Azure', 'icon' => 'inventory.svg', 'desc' => 'Create a new X509 wildcard on Azure', 'price' => 'Included'],
-    ['title' => 'X509 wildcard OVH', 'icon' => 'inventory.svg', 'desc' => 'Create a new X509 wildcard on OVH', 'price' => 'Included'],
-    ['title' => 'Build Docker image', 'icon' => 'inventory.svg', 'desc' => 'Build a new docker image', 'price' => 'Included'],
-    ['title' => 'Build SpringBoot application', 'icon' => 'inventory.svg', 'desc' => 'Build a new SpringBoot application', 'price' => 'Included'],
-    ['title' => 'CI/CD SpringBoot microservice Kubernetes', 'icon' => 'inventory.svg', 'desc' => 'CI/CD SpringBoot microservice Kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy Wordpress lightsail', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Wordpress app on lightsail', 'price' => 'Included'],
-    ['title' => 'Deploy Wordpress kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Wordpress app on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy Magento 2 lightsail', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Magento 2 app on lightsail', 'price' => 'Included'],
-    ['title' => 'Deploy Magento 2 kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Magento 2 app on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy Drupal lightsail', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Drupal app on lightsail', 'price' => 'Included'],
-    ['title' => 'Deploy Drupal kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Drupal app on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy MySQL 8 RDS', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new MySQL on RDS', 'price' => 'Included'],
-    ['title' => 'Deploy MySQL 8 kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new MySQL 8 on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy ElasticSearch 7 kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new ElasticSearch 7 on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy ElasticSearch 8 kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new ElasticSearch 8 on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy ELK 7 kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new ELK 7 on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy ELK 8 kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new ELK 8 on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy Kafka kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Kafka on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy RabbitMQ kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new RabbitMQ on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy Prometheus kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Prometheus on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy Prometheus+Grafana kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Prometheus+Grafana on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy Monitoring kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new Monitoring on kubernetes', 'price' => 'Included'],
-    ['title' => 'Deploy APM kubernetes', 'icon' => 'inventory.svg', 'desc' => 'Deploy a new APM on kubernetes', 'price' => 'Included'],
-    ['title' => 'Smart Search',   'icon' => 'search.svg',    'desc' => 'AI powered search',  'price' => '$19/mo'],
-    ['title' => 'Loyalty Points', 'icon' => 'loyalty.svg',   'desc' => 'Reward customers',  'price' => 'Free trial'],
+    ['title' => 'Deploy Minecraft kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Minecraft on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Docker Node Lightsail', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new Docker node on lightsail', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Docker Node EC2', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new Docker node on ec2', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Bucket S3 Private', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new bucket s3 on aws', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Bucket S3 Public', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new bucket s3 on aws with public access', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'EKS Cluster', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new EKS cluster on aws', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Rancher Cluster Lightsail', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new custom cluster on lightsail', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Rancher Cluster EC2', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new custom cluster on ec2', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Docker Node Azure', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new Docker node on Azure', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'X509 Wildcard Route53', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new X509 wildcard on route53', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'X509 Wildcard Azure', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new X509 wildcard on Azure', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'X509 Wildcard OVH', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new X509 wildcard on OVH', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Build Docker Image', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Build a new docker image', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Build SpringBoot Application', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Build a new SpringBoot application', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'CI/CD SpringBoot Microservice Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'CI/CD SpringBoot microservice Kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy Wordpress Lightsail', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Wordpress app on lightsail', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy Wordpress Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Wordpress app on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy Magento 2 Lightsail', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Magento 2 app on lightsail', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy Magento 2 Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Magento 2 app on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy Drupal Lightsail', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Drupal app on lightsail', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy Drupal Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Drupal app on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy MySQL 8 RDS', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new MySQL on RDS', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy MySQL 8 Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new MySQL 8 on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy ElasticSearch 7 kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new ElasticSearch 7 on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy ElasticSearch 8 kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new ElasticSearch 8 on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy ELK 7 Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new ELK 7 on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy ELK 8 Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new ELK 8 on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy Kafka Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Kafka on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy RabbitMQ Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new RabbitMQ on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy Prometheus Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Prometheus on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy Prometheus+Grafana Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Prometheus+Grafana on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy Monitoring Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Monitoring on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy APM Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new APM on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Smart Search',   'icon' => 'Pipelines_TemplateStore::images/search.svg',    'desc' => 'AI powered search',  'price' => '$19/mo', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Loyalty Points', 'icon' => 'Pipelines_TemplateStore::images/loyalty.svg',   'desc' => 'Reward customers',  'price' => 'Free trial', 'select' => 'deployminecraftkubernetes/index'],
 ];
 ?>
 
@@ -55,7 +55,7 @@ $apps = [
     <?php foreach ($apps as $app): ?>
         <div class="app-card" data-app='<?= json_encode($app, JSON_HEX_TAG) ?>'>
             <div class="app-card__icon">
-                <img src="<?= $block->getViewFileUrl('Pipelines_TemplateStore::images/' . $app['icon']) ?>" alt="" />
+                <img src="<?= $block->getViewFileUrl($app['icon']) ?>" alt="" />
             </div>
             <div class="app-card__body">
                 <h3 class="app-card__title"><?= $block->escapeHtml($app['title']) ?></h3>
@@ -63,7 +63,7 @@ $apps = [
             </div>
             <div class="app-card__footer">
                 <span class="app-card__price"><?= $block->escapeHtml($app['price']) ?></span>
-                <a href="<?= $block->getUrl('deployminecraftkubernetes/index') ?>">
+                <a href="<?= $block->getUrl($app['select']) ?>">
                     <button class="action-primary"><?= __('Select') ?></button>
                 </a>
 
