--- a/Pipelines/V1/Module/TemplateStore/view/adminhtml/templates/index.phtml
+++ b/Pipelines/V1/Module/TemplateStore/view/adminhtml/templates/index.phtml
@@ -3,41 +3,42 @@
 
 // Fake data for the prototype – replace with real collection / API call
 $apps = [
-    ['title' => 'Deploy Minecraft kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Minecraft on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Docker Node Lightsail', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new Docker node on lightsail', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Docker Node EC2', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new Docker node on ec2', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Bucket S3 Private', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new bucket s3 on aws', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Bucket S3 Public', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new bucket s3 on aws with public access', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'EKS Cluster', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new EKS cluster on aws', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Rancher Cluster Lightsail', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new custom cluster on lightsail', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Rancher Cluster EC2', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new custom cluster on ec2', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Docker Node Azure', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new Docker node on Azure', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'X509 Wildcard Route53', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new X509 wildcard on route53', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'X509 Wildcard Azure', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new X509 wildcard on Azure', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'X509 Wildcard OVH', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Create a new X509 wildcard on OVH', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Build Docker Image', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Build a new docker image', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Build SpringBoot Application', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Build a new SpringBoot application', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'CI/CD SpringBoot Microservice Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'CI/CD SpringBoot microservice Kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy Wordpress Lightsail', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Wordpress app on lightsail', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy Wordpress Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Wordpress app on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy Magento 2 Lightsail', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Magento 2 app on lightsail', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy Magento 2 Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Magento 2 app on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy Drupal Lightsail', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Drupal app on lightsail', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy Drupal Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Drupal app on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy MySQL 8 RDS', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new MySQL on RDS', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy MySQL 8 Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new MySQL 8 on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy ElasticSearch 7 kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new ElasticSearch 7 on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy ElasticSearch 8 kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new ElasticSearch 8 on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy ELK 7 Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new ELK 7 on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy ELK 8 Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new ELK 8 on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy Kafka Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Kafka on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy RabbitMQ Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new RabbitMQ on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy Prometheus Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Prometheus on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy Prometheus+Grafana Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Prometheus+Grafana on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy Monitoring Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new Monitoring on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Deploy APM Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/inventory.svg', 'desc' => 'Deploy a new APM on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Smart Search',   'icon' => 'Pipelines_TemplateStore::images/search.svg',    'desc' => 'AI powered search',  'price' => '$19/mo', 'select' => 'deployminecraftkubernetes/index'],
-    ['title' => 'Loyalty Points', 'icon' => 'Pipelines_TemplateStore::images/loyalty.svg',   'desc' => 'Reward customers',  'price' => 'Free trial', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Deploy Minecraft Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/minecraft.png', 'desc' => 'Deploy a new Minecraft on kubernetes', 'price' => 'Included', 'select' => 'deployminecraftkubernetes/index'],
+    ['title' => 'Docker Node Lightsail', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Create a new Docker node on lightsail', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Docker Node EC2', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Create a new Docker node on AWS EC2', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Bucket S3 Private', 'icon' => 'Pipelines_TemplateStore::images/s3.png', 'desc' => 'Create a new bucket s3 on AWS', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Bucket S3 Public', 'icon' => 'Pipelines_TemplateStore::images/s3.png', 'desc' => 'Create a new bucket s3 on AWS with public access', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'EKS Cluster', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Create a new EKS cluster on AWS', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'AKS Cluster', 'icon' => 'Pipelines_TemplateStore::images/azure-2.png', 'desc' => 'Create a new AKS cluster on Azure', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Rancher Cluster Lightsail', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Create a new custom cluster on lightsail', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Rancher Cluster EC2', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Create a new custom cluster on ec2', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Docker Node Azure', 'icon' => 'Pipelines_TemplateStore::images/azure-2.png', 'desc' => 'Create a new Docker node on Azure', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'X509 Wildcard Route53', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Create a new X509 wildcard on route53', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'X509 Wildcard Azure', 'icon' => 'Pipelines_TemplateStore::images/azure-2.png', 'desc' => 'Create a new X509 wildcard on Azure', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'X509 Wildcard OVH', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Create a new X509 wildcard on OVH', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Build Docker Image', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Build a new docker image', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Build SpringBoot Application', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Build a new SpringBoot application', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'CI/CD SpringBoot Microservice Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'CI/CD SpringBoot microservice Kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy Wordpress Lightsail', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new Wordpress app on lightsail', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy Wordpress Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new Wordpress app on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy Magento 2 Lightsail', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new Magento 2 app on lightsail', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy Magento 2 Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new Magento 2 app on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy Drupal Lightsail', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new Drupal app on lightsail', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy Drupal Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new Drupal app on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy MySQL 8 RDS', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new MySQL on RDS', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy MySQL 8 Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new MySQL 8 on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy ElasticSearch 7 kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new ElasticSearch 7 on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy ElasticSearch 8 kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new ElasticSearch 8 on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy ELK 7 Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new ELK 7 on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy ELK 8 Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new ELK 8 on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy Kafka Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new Kafka on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy RabbitMQ Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new RabbitMQ on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy Prometheus Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new Prometheus on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy Prometheus+Grafana Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new Prometheus+Grafana on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy Monitoring Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new Monitoring on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Deploy APM Kubernetes', 'icon' => 'Pipelines_TemplateStore::images/aws.jpeg', 'desc' => 'Deploy a new APM on kubernetes', 'price' => 'Included', 'select' => 'templatestore/index'],
+    ['title' => 'Smart Search',   'icon' => 'Pipelines_TemplateStore::images/sindria-logo.png',    'desc' => 'AI powered search',  'price' => '$19/mo', 'select' => 'templatestore/index'],
+    ['title' => 'Loyalty Points', 'icon' => 'Pipelines_TemplateStore::images/sindria-logo.png',   'desc' => 'Reward customers',  'price' => 'Free trial', 'select' => 'templatestore/index'],
 ];
 ?>
 
