--- a/Pipelines/V1/Module/Configmap/view/adminhtml/templates/select.phtml
+++ b/Pipelines/V1/Module/Configmap/view/adminhtml/templates/select.phtml
@@ -1,7 +1,13 @@
 <?php
 /** @var $block Pipelines\Configmap\Block\Adminhtml\Configmap */
 
-//dd($block->getBlockHtml('formkey'));
+use Pipelines\Configmap\Helper\ConfigmapHelper;
+
+$username = $block->getCurrentUser()->getUsername();
+
+$configmaps = $block->getConfigmaps();
+
+//dd(\Pipelines\Configmap\Helper\ConfigmapHelper::makeLabelFromSlug($configmaps[0]));
 
 $action = $block->getUrl("configmap/index/choose", ['configmap_id' => $block->getConfigmapId(), 'isAjax' => false]);
 //dd($action);
@@ -13,6 +19,8 @@ $action = $block->getUrl("configmap/index/choose", ['configmap_id' => $block->ge
 <form action="<?= $action ?>" method="post">
 
     <?= $block->getBlockHtml('formkey') ?>
+    <input name="owner" type="hidden" value="<?= $username ?>" />
+
 
 
     <div class="entry-edit form-inline">
@@ -33,10 +41,10 @@ $action = $block->getUrl("configmap/index/choose", ['configmap_id' => $block->ge
 
                             <select onchange="this.form.submit()" class="admin__control-select" name="configmap" id="BQQFMJB">
                                 <option value="">-- Please Select --</option>
-                                <option data-title="XPipe System" value="1">XPipe System</option>
-                                <option data-title="XPipe PaaS" value="2">XPipe PaaS</option>
-                                <option data-title="Barilla Production" value="3">Barilla Production</option>
-                                <option data-title="Samuele Riviera Nuragica Production" value="4">Samuele Riviera Nuragica Production</option>
+                                <?php foreach ($configmaps as $configmap): ?>
+                                    <option data-title="XPipe System" value="<?= $configmap ?>"><?= ConfigmapHelper::makeLabelFromSlug($configmap) ?></option>
+                                <?php endforeach; ?>
+
                             </select>
 
                         </div>
