task-77: fix integration with select logic

--- a/Pipelines/V1/Module/Configmap/view/adminhtml/templates/select.phtml
+++ b/Pipelines/V1/Module/Configmap/view/adminhtml/templates/select.phtml
@@ -9,7 +9,9 @@ $configmaps = $block->getConfigmaps();
 
 //dd(\Pipelines\Configmap\Helper\ConfigmapHelper::makeLabelFromSlug($configmaps[0]));
 
-$action = $block->getUrl("configmap/index/choose", ['configmap_id' => $block->getConfigmapId(), 'isAjax' => false]);
+$currentConfigmap = $block->getConfigmapId();
+
+$action = $block->getUrl("configmap/index/choose", ['configmap_id' => $currentConfigmap, 'isAjax' => false]);
 //dd($block->getConfigmapId());
 
 
@@ -38,11 +40,10 @@ $action = $block->getUrl("configmap/index/choose", ['configmap_id' => $block->ge
 
                         </div>
                         <div class="admin__field-control">
-
                             <select onchange="this.form.submit()" class="admin__control-select" name="configmap_id" id="BQQFMJB">
                                 <option value="">Create new Configmap</option>
                                 <?php foreach ($configmaps as $configmap): ?>
-                                    <option data-title="XPipe System" value="<?= $configmap ?>"><?= ConfigmapHelper::makeLabelFromSlug($configmap) ?></option>
+                                    <option data-title="XPipe System" value="<?= $configmap ?>" <?= $currentConfigmap === $configmap ? " selected" : ""?>  ><?= ConfigmapHelper::makeLabelFromSlug($configmap) ?></option>
                                 <?php endforeach; ?>
 
                             </select>
