Init SecureInput module

--- a/Core/V1/Module/SecureInput/view/adminhtml/web/template/form/element/secure-input.html
+++ b/Core/V1/Module/SecureInput/view/adminhtml/web/template/form/element/secure-input.html
@@ -1,5 +1,3 @@
-<!-- PASSWORD TOGGLE CUSTOM TEMPLATE LOADED -->
-
 <div class="admin__field-control">
     <div class="admin__control-wrapper password-toggle-wrapper">
         <input class="admin__control-text"
@@ -7,7 +5,7 @@
                           attr: {
                               name: inputName,
                               id: uid,
-                              type: typeof inputType === 'function' ? inputType() : 'password'
+                              type: inputType()
                           },
                           hasFocus: focused" />
 
@@ -15,10 +13,8 @@
                 class="admin__action-btn password-toggle-btn"
                 data-bind="click: togglePasswordVisibility"
                 aria-label="Toggle password visibility">
-            <!-- Occhio SVG -->
             <svg xmlns="http://www.w3.org/2000/svg"
-                 height="20" width="20"
-                 viewBox="0 0 24 24">
+                 height="20" width="20" viewBox="0 0 24 24">
                 <path d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5C21.27 7.61 17 4.5 12 4.5zm0 12.75c-2.76 0-5-2.24-5-5s2.24-5 5-5
                         5 2.24 5 5-2.24 5-5 5z"/>
                 <circle cx="12" cy="12" r="2.5"/>
@@ -26,12 +22,10 @@
         </button>
     </div>
 </div>
-
 <style>
     .password-toggle-wrapper {
         position: relative;
     }
-
     .password-toggle-btn {
         position: absolute;
         right: 10px;
