--- a/Pipelines/V1/Module/ParentMenu/view/adminhtml/layout/default.xml
+++ b/Pipelines/V1/Module/ParentMenu/view/adminhtml/layout/default.xml
@@ -2,6 +2,6 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="Pipelines_PipeManager::css/pipemanager-menu.css"/>
+        <css src="Pipelines_ParentMenu::css/menu.css"/>
     </head>
 </page>
